--- a/CareDirection/CareDirection/Resources/Storyboard/Symptom.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/Symptom.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ar5-rf-L4M">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--SymptomVC-->
         <scene sceneID="p7s-mz-4Mc">
             <objects>
-                <viewController id="ar5-rf-L4M" sceneMemberID="viewController">
+                <viewController id="ar5-rf-L4M" customClass="SymptomVC" customModule="CareDirection" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="klt-0u-IJH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -41,14 +41,34 @@
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f59-Mr-9jw">
+                                <rect key="frame" x="123" y="613" width="130" height="34"/>
+                                <color key="backgroundColor" red="0.0" green="0.64705882349999999" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="130" id="NJx-eq-itL"/>
+                                    <constraint firstAttribute="height" constant="34" id="qvI-HV-2FO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="14"/>
+                                <state key="normal" title="제품 보러가기">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="f59-Mr-9jw" firstAttribute="leading" secondItem="VS3-CV-VwV" secondAttribute="leading" constant="123" id="S2j-eR-Y2Z"/>
+                            <constraint firstItem="VS3-CV-VwV" firstAttribute="trailing" secondItem="f59-Mr-9jw" secondAttribute="trailing" constant="122" id="TfN-JI-5Ho"/>
+                            <constraint firstItem="VS3-CV-VwV" firstAttribute="bottom" secondItem="f59-Mr-9jw" secondAttribute="bottom" constant="20" id="Ul0-Cm-UfZ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="VS3-CV-VwV"/>
                     </view>
+                    <connections>
+                        <outlet property="goToProductButton" destination="f59-Mr-9jw" id="ply-mY-gDs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KBK-7a-rij" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="161" y="51"/>
+            <point key="canvasLocation" x="188" y="51"/>
         </scene>
     </scenes>
     <resources>
